--- a/error.css
+++ b/error.css
@@ -106,6 +106,7 @@ textarea {
 h1 {
     text-align: center;
     margin: 30px 15px;
+    color: black;
 }
 .zoom-area {
     max-width: 490px;
@@ -119,10 +120,10 @@ h1 {
 a.more-link {
     text-transform: uppercase;
     font-size: 13px;
-    background-color: #bbb;
+    background-color: lightgrey;
     padding: 10px 15px;
     border-radius: 0;
-    color: #fff;
+    color: black;
     display: inline-block;
     margin-right: 5px;
     margin-bottom: 5px;
@@ -130,4 +131,10 @@ a.more-link {
     text-decoration: none;
     margin-top: 50px;
     letter-spacing: 1px;
+}
+b{
+    color : black;
+}
+p{
+    color : black;
 }
